docs/alphaindexes/3.2.x/micommands.md
# Modules MI Commands

([A](#a)) ([B](#b)) ([C](#c)) ([D](#d)) ([E](#e)) ([F](#f)) ([G](#g))
([H](#h)) ([I](#i)) ([J](#j)) ([K](#k)) ([L](#l)) ([M](#m)) ([N](#n))
([O](#o)) ([P](#p)) ([Q](#q)) ([R](#r)) ([S](#s)) ([T](#t)) ([U](#u))
([V](#v)) ([W](#w)) ([X](#x)) ([Y](#y)) ([Z](#z))

## \[A\]

| Name               | Module Path | Module Name                                                                          |
|--------------------|-------------|--------------------------------------------------------------------------------------|
| **address_dump**   | *modules_k* | [permissions](http://www.kamailio.org/docs/modules/3.2.x/modules_k/permissions.html) |
| **address_reload** | *modules_k* | [permissions](http://www.kamailio.org/docs/modules/3.2.x/modules_k/permissions.html) |
| **allow_uri**      | *modules_k* | [permissions](http://www.kamailio.org/docs/modules/3.2.x/modules_k/permissions.html) |
| **arg**            | *modules_k* | [kex](http://www.kamailio.org/docs/modules/3.2.x/modules_k/kex.html)                 |

## \[B\]

| Name                 | Module Path | Module Name                                                                        |
|----------------------|-------------|------------------------------------------------------------------------------------|
| **bdb_reload**       | *modules*   | [db_berkeley](http://www.kamailio.org/docs/modules/3.2.x/modules/db_berkeley.html) |
| **bm_enable_global** | *modules_k* | [benchmark](http://www.kamailio.org/docs/modules/3.2.x/modules_k/benchmark.html)   |
| **bm_enable_timer**  | *modules_k* | [benchmark](http://www.kamailio.org/docs/modules/3.2.x/modules_k/benchmark.html)   |
| **bm_granularity**   | *modules_k* | [benchmark](http://www.kamailio.org/docs/modules/3.2.x/modules_k/benchmark.html)   |
| **bm_loglevel**      | *modules_k* | [benchmark](http://www.kamailio.org/docs/modules/3.2.x/modules_k/benchmark.html)   |

## \[C\]

| Name                   | Module Path | Module Name                                                                                          |
|------------------------|-------------|------------------------------------------------------------------------------------------------------|
| **check_config_hash**  | *modules_k* | [cfgutils](http://www.kamailio.org/docs/modules/3.2.x/modules_k/cfgutils.html)                       |
| **cleanup**            | *modules_k* | [presence](http://www.kamailio.org/docs/modules/3.2.x/modules_k/presence.html)                       |
| **conference_reset**   | *modules_k* | [presence_conference](http://www.kamailio.org/docs/modules/3.2.x/modules_k/presence_conference.html) |
| **cr_activate_host**   | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/3.2.x/modules/carrierroute.html)                 |
| **cr_add_host**        | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/3.2.x/modules/carrierroute.html)                 |
| **cr_deactivate_host** | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/3.2.x/modules/carrierroute.html)                 |
| **cr_delete_host**     | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/3.2.x/modules/carrierroute.html)                 |
| **cr_dump_routes**     | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/3.2.x/modules/carrierroute.html)                 |
| **cr_reload_routes**   | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/3.2.x/modules/carrierroute.html)                 |
| **cr_replace_host**    | *modules*   | [carrierroute](http://www.kamailio.org/docs/modules/3.2.x/modules/carrierroute.html)                 |

## \[D\]

| Name                  | Module Path | Module Name                                                                        |
|-----------------------|-------------|------------------------------------------------------------------------------------|
| **dlg_bridge**        | *modules_k* | [dialog](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dialog.html)         |
| **dlg_end_dlg**       | *modules_k* | [dialog](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dialog.html)         |
| **dlg_list**          | *modules_k* | [dialog](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dialog.html)         |
| **dlg_list_ctx**      | *modules_k* | [dialog](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dialog.html)         |
| **dlg_terminate_dlg** | *modules_k* | [dialog](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dialog.html)         |
| **domain_dump**       | *modules_k* | [domain](http://www.kamailio.org/docs/modules/3.2.x/modules_k/domain.html)         |
| **domain_reload**     | *modules_k* | [domain](http://www.kamailio.org/docs/modules/3.2.x/modules_k/domain.html)         |
| **dp_reload**         | *modules*   | [dialplan](http://www.kamailio.org/docs/modules/3.2.x/modules/dialplan.html)       |
| **dp_translate**      | *modules*   | [dialplan](http://www.kamailio.org/docs/modules/3.2.x/modules/dialplan.html)       |
| **dr_reload**         | *modules_k* | [drouting](http://www.kamailio.org/docs/modules/3.2.x/modules_k/drouting.html)     |
| **ds_list**           | *modules_k* | [dispatcher](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dispatcher.html) |
| **ds_reload**         | *modules_k* | [dispatcher](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dispatcher.html) |
| **ds_set_state**      | *modules_k* | [dispatcher](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dispatcher.html) |

## \[E\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[F\]

| Name               | Module Path | Module Name                                                            |
|--------------------|-------------|------------------------------------------------------------------------|
| **forward_filter** | *modules*   | [utils](http://www.kamailio.org/docs/modules/3.2.x/modules/utils.html) |
| **forward_list**   | *modules*   | [utils](http://www.kamailio.org/docs/modules/3.2.x/modules/utils.html) |
| **forward_proxy**  | *modules*   | [utils](http://www.kamailio.org/docs/modules/3.2.x/modules/utils.html) |
| **forward_switch** | *modules*   | [utils](http://www.kamailio.org/docs/modules/3.2.x/modules/utils.html) |

## \[G\]

| Name                | Module Path | Module Name                                                                    |
|---------------------|-------------|--------------------------------------------------------------------------------|
| **get_config_hash** | *modules_k* | [cfgutils](http://www.kamailio.org/docs/modules/3.2.x/modules_k/cfgutils.html) |
| **GET_CPL**         | *modules_k* | [cpl-c](http://www.kamailio.org/docs/modules/3.2.x/modules_k/cpl-c.html)       |
| **get_gflags**      | *modules_k* | [cfgutils](http://www.kamailio.org/docs/modules/3.2.x/modules_k/cfgutils.html) |

## \[H\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[I\]

| Name                 | Module Path | Module Name                                                                    |
|----------------------|-------------|--------------------------------------------------------------------------------|
| **imc_list_members** | *modules_k* | [imc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/imc.html)           |
| **imc_list_rooms**   | *modules_k* | [imc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/imc.html)           |
| **is_gflag**         | *modules_k* | [cfgutils](http://www.kamailio.org/docs/modules/3.2.x/modules_k/cfgutils.html) |

## \[J\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[K\]

| Name     | Module Path | Module Name                                                          |
|----------|-------------|----------------------------------------------------------------------|
| **kill** | *modules_k* | [kex](http://www.kamailio.org/docs/modules/3.2.x/modules_k/kex.html) |

## \[L\]

| Name         | Module Path | Module Name                                                              |
|--------------|-------------|--------------------------------------------------------------------------|
| **LOAD_CPL** | *modules_k* | [cpl-c](http://www.kamailio.org/docs/modules/3.2.x/modules_k/cpl-c.html) |

## \[M\]

| Name           | Module Path | Module Name                                                            |
|----------------|-------------|------------------------------------------------------------------------|
| **mt_list**    | *modules*   | [mtree](http://www.kamailio.org/docs/modules/3.2.x/modules/mtree.html) |
| **mt_reload**  | *modules*   | [mtree](http://www.kamailio.org/docs/modules/3.2.x/modules/mtree.html) |
| **mt_summary** | *modules*   | [mtree](http://www.kamailio.org/docs/modules/3.2.x/modules/mtree.html) |

## \[N\]

| Name               | Module Path | Module Name                                                                      |
|--------------------|-------------|----------------------------------------------------------------------------------|
| **nh_enable_ping** | *modules_k* | [nathelper](http://www.kamailio.org/docs/modules/3.2.x/modules_k/nathelper.html) |
| **nh_enable_rtpp** | *modules*   | [rtpproxy](http://www.kamailio.org/docs/modules/3.2.x/modules/rtpproxy.html)     |
| **nh_show_rtpp**   | *modules*   | [rtpproxy](http://www.kamailio.org/docs/modules/3.2.x/modules/rtpproxy.html)     |

## \[O\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[P\]

| Name                  | Module Path | Module Name                                                                    |
|-----------------------|-------------|--------------------------------------------------------------------------------|
| **pdb_activate**      | *modules*   | [pdb](http://www.kamailio.org/docs/modules/3.2.x/modules/pdb.html)             |
| **pdb_deactivate**    | *modules*   | [pdb](http://www.kamailio.org/docs/modules/3.2.x/modules/pdb.html)             |
| **pdb_status**        | *modules*   | [pdb](http://www.kamailio.org/docs/modules/3.2.x/modules/pdb.html)             |
| **pdt_list**          | *modules_k* | [pdt](http://www.kamailio.org/docs/modules/3.2.x/modules_k/pdt.html)           |
| **pdt_reload**        | *modules_k* | [pdt](http://www.kamailio.org/docs/modules/3.2.x/modules_k/pdt.html)           |
| **pike_list**         | *modules_k* | [pike](http://www.kamailio.org/docs/modules/3.2.x/modules_k/pike.html)         |
| **pl_get_pid**        | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/3.2.x/modules/pipelimit.html) |
| **pl_get_pipes**      | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/3.2.x/modules/pipelimit.html) |
| **pl_push_load**      | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/3.2.x/modules/pipelimit.html) |
| **pl_set_pid**        | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/3.2.x/modules/pipelimit.html) |
| **pl_set_pipe**       | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/3.2.x/modules/pipelimit.html) |
| **pl_stats**          | *modules*   | [pipelimit](http://www.kamailio.org/docs/modules/3.2.x/modules/pipelimit.html) |
| **profile_get_size**  | *modules_k* | [dialog](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dialog.html)     |
| **profile_list_dlgs** | *modules_k* | [dialog](http://www.kamailio.org/docs/modules/3.2.x/modules_k/dialog.html)     |
| **pwd**               | *modules_k* | [kex](http://www.kamailio.org/docs/modules/3.2.x/modules_k/kex.html)           |

## \[Q\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[R\]

| Name                 | Module Path | Module Name                                                                              |
|----------------------|-------------|------------------------------------------------------------------------------------------|
| **rand_get_prob**    | *modules_k* | [cfgutils](http://www.kamailio.org/docs/modules/3.2.x/modules_k/cfgutils.html)           |
| **rand_reset_prob**  | *modules_k* | [cfgutils](http://www.kamailio.org/docs/modules/3.2.x/modules_k/cfgutils.html)           |
| **rand_set_prop**    | *modules_k* | [cfgutils](http://www.kamailio.org/docs/modules/3.2.x/modules_k/cfgutils.html)           |
| **refreshWatchers**  | *modules_k* | [presence](http://www.kamailio.org/docs/modules/3.2.x/modules_k/presence.html)           |
| **regex_reload**     | *modules_k* | [regex](http://www.kamailio.org/docs/modules/3.2.x/modules_k/regex.html)                 |
| **reload_blacklist** | *modules_k* | [userblacklist](http://www.kamailio.org/docs/modules/3.2.x/modules_k/userblacklist.html) |
| **reload_matrix**    | *modules*   | [matrix](http://www.kamailio.org/docs/modules/3.2.x/modules/matrix.html)                 |
| **REMOVE_CPL**       | *modules_k* | [cpl-c](http://www.kamailio.org/docs/modules/3.2.x/modules_k/cpl-c.html)                 |
| **reset_gflag**      | *modules_k* | [cfgutils](http://www.kamailio.org/docs/modules/3.2.x/modules_k/cfgutils.html)           |

## \[S\]

| Name            | Module Path | Module Name                                                                          |
|-----------------|-------------|--------------------------------------------------------------------------------------|
| **set_gflag**   | *modules_k* | [cfgutils](http://www.kamailio.org/docs/modules/3.2.x/modules_k/cfgutils.html)       |
| **sht_dump**    | *modules_k* | [htable](http://www.kamailio.org/docs/modules/3.2.x/modules_k/htable.html)           |
| **sht_reload**  | *modules_k* | [htable](http://www.kamailio.org/docs/modules/3.2.x/modules_k/htable.html)           |
| **shv_get**     | *modules_k* | [pv](http://www.kamailio.org/docs/modules/3.2.x/modules_k/pv.html)                   |
| **shv_set**     | *modules_k* | [pv](http://www.kamailio.org/docs/modules/3.2.x/modules_k/pv.html)                   |
| **sip_capture** | *modules*   | [sipcapture](http://www.kamailio.org/docs/modules/3.2.x/modules/sipcapture.html)     |
| **sip_trace**   | *modules_k* | [siptrace](http://www.kamailio.org/docs/modules/3.2.x/modules_k/siptrace.html)       |
| **subnet_dump** | *modules_k* | [permissions](http://www.kamailio.org/docs/modules/3.2.x/modules_k/permissions.html) |

## \[T\]

| Name               | Module Path | Module Name                                                                          |
|--------------------|-------------|--------------------------------------------------------------------------------------|
| **trusted_dump**   | *modules_k* | [permissions](http://www.kamailio.org/docs/modules/3.2.x/modules_k/permissions.html) |
| **trusted_reload** | *modules_k* | [permissions](http://www.kamailio.org/docs/modules/3.2.x/modules_k/permissions.html) |
| **t_hash**         | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html)                 |
| **t_reply**        | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html)                 |
| **t_reply_callid** | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html)                 |
| **t_uac_cancel**   | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html)                 |
| **t_uac_dlg**      | *modules_k* | [tmx](http://www.kamailio.org/docs/modules/3.2.x/modules_k/tmx.html)                 |

## \[U\]

| Name                | Module Path | Module Name                                                                |
|---------------------|-------------|----------------------------------------------------------------------------|
| **ul_add**          | *modules_k* | [usrloc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/usrloc.html) |
| **ul_dump**         | *modules_k* | [usrloc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/usrloc.html) |
| **ul_flush**        | *modules_k* | [usrloc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/usrloc.html) |
| **ul_rm**           | *modules_k* | [usrloc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/usrloc.html) |
| **ul_rm_contact**   | *modules_k* | [usrloc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/usrloc.html) |
| **ul_show_contact** | *modules_k* | [usrloc](http://www.kamailio.org/docs/modules/3.2.x/modules_k/usrloc.html) |
| **uptime**          | *modules_k* | [kex](http://www.kamailio.org/docs/modules/3.2.x/modules_k/kex.html)       |

## \[V\]

| Name        | Module Path | Module Name                                                          |
|-------------|-------------|----------------------------------------------------------------------|
| **version** | *modules_k* | [kex](http://www.kamailio.org/docs/modules/3.2.x/modules_k/kex.html) |

## \[W\]

| Name      | Module Path | Module Name                                                          |
|-----------|-------------|----------------------------------------------------------------------|
| **which** | *modules_k* | [kex](http://www.kamailio.org/docs/modules/3.2.x/modules_k/kex.html) |

## \[X\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[Y\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[Z\]

| Name | Module Path | Module Name |
|------|-------------|-------------|
